--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.1"
+  compileSdkVersion 24
+  buildToolsVersion "24.0.2"
 
   defaultConfig {
     applicationId "com.example.sam_chordas.stockhawk"
-    minSdkVersion 15
-    targetSdkVersion 23
+    minSdkVersion 17
+    targetSdkVersion 24
     versionCode 1
     versionName "1.0"
   }
@@ -26,13 +26,21 @@ repositories {
 
 dependencies {
 
-  compile 'com.google.android.gms:play-services-gcm:8.4.0'
+  compile 'com.google.android.gms:play-services-gcm:9.6.1'
   compile 'com.squareup.okhttp:okhttp:2.5.0'
   apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
   compile 'net.simonvt.schematic:schematic:0.6.3'
+  compile 'com.github.PhilJay:MPAndroidChart-Realm:v1.1.0@aar'
   compile 'com.melnykov:floatingactionbutton:1.2.0'
-  compile 'com.android.support:design:23.1.1'
+  compile 'com.squareup.retrofit2:retrofit:2.0.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+  compile 'com.android.support:recyclerview-v7:24.2.1'
+  compile 'com.android.support:design:24.2.1'
+  compile 'com.jakewharton:butterknife:7.0.1'
+  compile 'com.android.support:gridlayout-v7:24.2.1'
   compile('com.github.afollestad.material-dialogs:core:0.8.5.7@aar') {
     transitive = true
   }
+  compile 'com.diogobernardino:williamchart:2.2'
+
 }
